--- a/Project1_ML copy.ipynb
+++ b/Project1_ML copy.ipynb
@@ -170,6 +170,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#EDA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -353,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ILS DISENT DE FAIRE UNE EDA ICI !!!!!!!!!!!!!!!!!!!!!!!!!"
+    "# On commence le code"
    ]
   },
   {
